--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,62 @@
 
         <div id="projectTables">
             <section id="textBasedGame">
-                <h2>Text-Based Game</h2>
+                <h2>Object-Oriented Game</h2>
+                <table class="gameProjectTable">
+                    <tbody>
+                        <tr>
+                            <td colspan="2">
+                                <p>
+                                    For my year 1 second semester project I was tasked with designing an object-oriented, text-based, adventure game.
+                                    The player must traverse through various atmospheres and fight deadly beasts in order to progress to the final level where they must defeat a boss.
+                                    Mob enemies try to defeat the player, but by traversing the landscapes and killing enemies, the player will gain a significant amount of experience and strength in order to keep on fighting!
+                                    <br>
+                                    <br>
+                                    Throughout this project, I had the chance to consolidate OOP concepts I had learnt over the semester. 
+                                    Utilising GUI, I was able to create a more engaging adventure-themed decision-making game. 
+                                    Coding, debugging and testing in Java developed my logic and problem-solving skills, enabling me to achieve 100% for the project! 
+                                    Extra research towards new features allowed me to reach further heights - implementing a countdown feature in order to time-constrict user input significantly enhanced user experience during fights.
+                                    <br>
+                                    <br>
+                                    <a class="seeCoursework" href="https://github.com/TanurDellal/adventure-game">See Game on GitHub</a>
+                                </p>                       
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <figure>
+                                    <a href="images/figure4-1.png">
+                                        <img src="images/figure4-1.png" alt="Mini-Project GUI Intro" title="Mini-Project GUI Intro"/>
+                                    </a>
+                                    <figcaption>Figure 4.1: GUI Intro</figcaption>
+                                </figure>
+                            </td>
+                            <td>
+                                <figure>
+                                    <a href="images/figure4-2.png">
+                                        <img src="images/figure4-2.png" alt="Example Countdown" title="Example Countdown"/>
+                                    </a>
+                                    <figcaption>Figure 4.2: Example Countdown</figcaption>
+                                </figure>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">
+                                <figure>
+                                    <a href="images/figure4-3.png">
+                                        <img src="images/figure4-3.png" alt="Game Summary Board" title="Game Summary Board"/>
+                                    </a>
+                                    <figcaption>Figure 4.3: Game Summary Board</figcaption>
+                                </figure>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
+
+
+            <section id="textBasedGame">
+                <h2>Procedural-Style Game</h2>
                 <table class="gameProjectTable">
                     <tbody>
                         <tr>
@@ -61,18 +116,18 @@
                         <tr>
                             <td>
                                 <figure>
-                                    <a href="images/figure4-1.png">
-                                        <img src="images/figure4-1.png" alt="Mini-Project Task Summary" title="Mini-Project Task Summary"/>
+                                    <a href="images/figure5-1.png">
+                                        <img src="images/figure5-1.png" alt="Mini-Project Task Summary" title="Mini-Project Task Summary"/>
                                     </a>
-                                    <figcaption>Figure 4.1: Task summary</figcaption>
+                                    <figcaption>Figure 5.1: Task summary</figcaption>
                                 </figure>
                             </td>
                             <td>
                                 <figure>
-                                    <a href="images/figure4-2.png">
-                                        <img src="images/figure4-2.png" alt="Example Run of Game" title="Example Run of Game"/>
+                                    <a href="images/figure5-2.png">
+                                        <img src="images/figure5-2.png" alt="Example Run of Game" title="Example Run of Game"/>
                                     </a>
-                                    <figcaption>Figure 4.2: Example run of the text-based game</figcaption>
+                                    <figcaption>Figure 5.2: Example run of the text-based game</figcaption>
                                 </figure>
                             </td>
                         </tr>
@@ -114,38 +169,38 @@
                         <tr>
                             <td colspan="2">
                                 <figure>
-                                    <a href="images/figure5-1.png">
-                                        <img id="edizTanLogo" src="images/figure5-1.png" alt="Ediz Tan Logo" title="Ediz Tan Logo"/>
+                                    <a href="images/figure6-1.png">
+                                        <img id="edizTanLogo" src="images/figure6-1.png" alt="Ediz Tan Logo" title="Ediz Tan Logo"/>
                                     </a>
-                                    <figcaption>Figure 5.1: My artist logo - Ediz Tan</figcaption>
+                                    <figcaption>Figure 6.1: My artist logo - Ediz Tan</figcaption>
                                 </figure>
                             </td>
                         </tr>
                         <tr>
                             <td colspan="2">
                                 <figure>
-                                    <a href="images/figure5-2.png">
-                                        <img id="aboutEdizTan" src="images/figure5-2.png" alt="About Ediz Tan" title="About Ediz Tan"/>
+                                    <a href="images/figure6-2.png">
+                                        <img id="aboutEdizTan" src="images/figure6-2.png" alt="About Ediz Tan" title="About Ediz Tan"/>
                                     </a>
-                                    <figcaption>Figure 5.2: More info about me as an artist</figcaption>
+                                    <figcaption>Figure 6.2: More info about me as an artist</figcaption>
                                 </figure>
                             </td>
                         </tr>
                         <tr>
                             <td>
                                 <figure>
-                                    <a href="images/figure5-3.png">
-                                        <img id="edizTanHomepage" src="images/figure5-3.png" alt="Artist Homepage" title="Artist Homepage"/>
+                                    <a href="images/figure6-3.png">
+                                        <img id="edizTanHomepage" src="images/figure6-3.png" alt="Artist Homepage" title="Artist Homepage"/>
                                     </a>
-                                    <figcaption>Figure 5.3: Ediz Tan Homepage</figcaption>
+                                    <figcaption>Figure 6.3: Ediz Tan Homepage</figcaption>
                                 </figure>
                             </td>
                             <td>
                                 <figure>
-                                    <a href="images/figure5-4.png">
-                                        <img src="images/figure5-4.png" alt="Ediz Tan Releases" title="Ediz Tan Releases"/>
+                                    <a href="images/figure6-4.png">
+                                        <img src="images/figure6-4.png" alt="Ediz Tan Releases" title="Ediz Tan Releases"/>
                                     </a>
-                                    <figcaption>Figure 5.4: Releases on Ediz Tan Page</figcaption>
+                                    <figcaption>Figure 6.4: Releases on Ediz Tan Page</figcaption>
                                 </figure>
                             </td>
                         </tr>
@@ -177,20 +232,20 @@
                         <tr>
                             <td colspan="2">
                                 <figure>
-                                    <a href="images/figure6-1.png">
-                                        <img id="presentationImages" src="images/figure6-1.png" alt="Slide Worked On From Presentation" title="Slide Worked On From Presentation"/>
+                                    <a href="images/figure7-1.png">
+                                        <img id="presentationImages" src="images/figure7-1.png" alt="Slide Worked On From Presentation" title="Slide Worked On From Presentation"/>
                                     </a>
-                                    <figcaption>Figure 4.1: Social problems caused by smartphone e-waste (slide)</figcaption>
+                                    <figcaption>Figure 7.1: Social problems caused by smartphone e-waste (slide)</figcaption>
                                 </figure>
                             </td>
                         </tr>
                         <tr>
                             <td colspan="2">
                                 <figure>
-                                    <a href="images/figure6-2.png">
-                                        <img id="presentationImages" src="images/figure6-2.png" alt="Slide Worked On From Presentation" title="Slide Worked On From Presentation"/>
+                                    <a href="images/figure7-2.png">
+                                        <img id="presentationImages" src="images/figure7-2.png" alt="Slide Worked On From Presentation" title="Slide Worked On From Presentation"/>
                                     </a>
-                                    <figcaption>Figure 4.2: Social solutions for smartphone e-waste problems (slide)</figcaption>
+                                    <figcaption>Figure 7.2: Social solutions for smartphone e-waste problems (slide)</figcaption>
                                 </figure>
                             </td>
                         </tr>
