--- a/skills.html
+++ b/skills.html
@@ -356,6 +356,26 @@
                 <tr>
                     <td>
                         <figure>
+                            <a href="images/upreachcertificate.jpg">
+                                <img src="images/upreachcertificate.jpg" alt="upReach Institute Logo" title="upReach Institute Logo"/>
+                            </a>
+                        </figure>
+                    </td>
+
+                    <td id="details">
+                        <hr>
+                        <h3>Springboard Silver Award</h3>
+                        <p>upReach</p>
+                        <i id="date">Sep 2022</i>
+                        <br>
+                        <ul>
+                            <li><i id="listSymbol">&#9900;</i> Award granted following active engagement with upReach's skill development platform</li>
+                        </ul>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <figure>
                             <a href="images/teamupcertificate.jpg">
                                 <img src="images/teamupcertificate.jpg" alt="Team Up Institute Logo" title="Team Up Institute Logo"/>
                             </a>
